feat: 배경 및 UI 창의적으로 개선

--- a/index.html
+++ b/index.html
@@ -5,9 +5,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Snake Game</title>
   <style>
-    body { background: #222; display: flex; justify-content: center; align-items: center; height: 100vh; }
-    canvas { background: #111; border: 2px solid #0f0; }
-    h1 { color: #0f0; text-align: center; }
+    body {
+      min-height: 100vh;
+      margin: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background: linear-gradient(135deg, #1e3c72 0%, #2a5298 100%);
+    }
+    canvas {
+      background: linear-gradient(135deg, #232526 0%, #414345 100%);
+      border: 3px solid #fff700;
+      box-shadow: 0 0 30px #fff70088;
+      border-radius: 20px;
+    }
+    h1 {
+      color: #fff700;
+      text-align: center;
+      text-shadow: 0 2px 10px #000;
+    }
   </style>
 </head>
 <body>
